styles.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "DM Sans", sans-serif;
}

body {
    max-width: 100vw;
    overflow-x: hidden;
}

nav {
    height: 80px;
    display: flex;
}

img {
    width: 100%
}

p {
    line-height: 1.5;
}

.blue {
    color: rgb(2, 107, 86);
}

.nav__container {
    width: 100%;
    max-width: 1200px;
    padding: 0 24px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
}


.logo {
    width: 160px;
}
ul {
    display: flex;
}

li {
    list-style-type: none;
}

.nav__link {
    margin-left: 16px;
    text-decoration: none;
    font-size: 20px;
    color: #242424;
    font-weight: bold;
    padding: 8px;
}

.nav__link--primary {
    border: 2px solid rgb(187, 225, 187);
    border-radius: 10px;
}

.nav__link:hover {
    text-decoration: underline;
}

.nav__link--primary:hover {
    text-decoration: none;
}

#landing {
    background-color: rgb(227, 247, 239);
}

header {
    height: calc(100vh - 80px);
}

.header__container {
    width: 100%;
    max-width: 720px;
    margin: 0 auto;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.header__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header__img--wrapper {
    padding: 20px;
    z-index: 50;
}

h1 {
    font-size: 56px;
    color: rgb(2, 107, 86);
    margin-bottom: 24px;
    text-align: center;
}

h2 {
    text-align: center;
    font-size: 32px;
    margin-bottom: 32px;
}

.btn {
    background-color: rgb(2, 107, 86);
    color: white;
    padding: 12px 24px;
    font-size: 20px;
    border-radius: 4px;
    border: none;
}

button {
    cursor: pointer;
}

button:active {
    transform: translateY(1px);
}


.header__img {
    position: absolute;
}

.container {
    padding: 56px 0;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

/* 

HIGHLIGHTS

*/

#highlights {
    position: relative;
    max-width: 100vw;
}

#highlights:after,
#highlights:before {
  background: url('assets/wave.svg');
  content: "";
  position: absolute;
  width: 101vw;
  height: 12vw;
  left: 0;
  z-index: 1;
  background-size: cover;
  background-repeat: no-repeat;
}

#highlights:before {
  transform: translateY(-100%);
  top: 1px;
}

#highlights:after {
  transform: translateY(100%) rotate(180deg);
  bottom: 1px;
}

.highlight__wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
}

.highlight {
    padding: 0 24px;
    width: calc(100 / 3);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.highlight__subtitle {
    font-size: 20px;
    margin-bottom: 16px;
}

.highlight__para {
    font-size: 12px;
    text-align: center;
    max-width: 180px;
}

.highlight__img {
    border: 2px solid rgba(2, 107, 86, 0.309);
    color:rgb(2, 107, 86);
    width: 100px;
    height: 100px;
    border-radius: 8px;
    display: flex;
    align-items:  center;
    justify-content: center;
    font-size: 32px;
    margin-bottom: 24px;
}

